--- a/pom.xml
+++ b/pom.xml
@@ -72,13 +72,6 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-    <distributionManagement>
-        <repository>
-            <id>github</id>
-            <name>GitHub fuzi1996 MyBatisDynamicQueryer Packages</name>
-            <url>https://maven.pkg.github.com/fuzi1996/MybatisDynamicQueryerDemo</url>
-        </repository>
-    </distributionManagement>
     <build>
         <resources>
             <resource>
@@ -113,6 +106,9 @@
                 </plugin>
                 <plugin>
                     <artifactId>maven-surefire-plugin</artifactId>
+                    <configuration>
+                        <skipTests>true</skipTests>
+                    </configuration>
                     <version>2.22.1</version>
                 </plugin>
                 <plugin>
