--- a/pom.xml
+++ b/pom.xml
@@ -41,8 +41,8 @@
         </dependency>
         <dependency>
             <groupId>com.github.mybatisdq</groupId>
-            <artifactId>MybatisDynamicQueryer</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>mybatis-dynamic-queryer</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
         <dependency>
