--- a/pom.xml
+++ b/pom.xml
@@ -40,8 +40,8 @@
             <version>3.4.3.1</version>
         </dependency>
         <dependency>
-            <groupId>com.github.mybatisdq</groupId>
-            <artifactId>mybatis-dynamic-queryer</artifactId>
+            <groupId>com.fuzi1996.demo</groupId>
+            <artifactId>java-maven-github-action-demo</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
 
