--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,16 @@
     <properties>
         <java.version>1.8</java.version>
     </properties>
+    <repositories>
+        <repository>
+            <id>github</id>
+            <name>github</name>
+            <url>https://maven.pkg.github.com/fuzi1996/JavaMavenGithubActionDemo</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -42,7 +52,7 @@
         <dependency>
             <groupId>com.fuzi1996.demo</groupId>
             <artifactId>java-maven-github-action-demo</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <version>1.0.1-SNAPSHOT</version>
         </dependency>
 
         <dependency>
