fix:fix package jar cant run and add tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=learnmybatis
 spring.datasource.password=learnpassword
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+mybatis.mapperLocations=classpath:mapper/*Mapper.xml
