feat:add sqlprovider type demo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.username=learnmybatis
 spring.datasource.password=learnpassword
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 mybatis.mapperLocations=classpath:mapper/*Mapper.xml
+
+spring.datasource.hikari.connection-timeout=3000000
